chat-d-flex fixed + overflow-y

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 
 body{
     font-family: 'Lato', sans-serif;
+    user-select: none;
 }
 
 #app {
@@ -89,6 +90,10 @@ body{
 
 .p0{
     padding: 0;
+}
+
+.h0{
+    height: 0;
 }
 
 .sent{
